--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "antd": "^5.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
     "sass": "^1.68.0",
     "typescript": "^4.9.5",
